test_suite/tests/ui/fail/invalid_parent/empty_parent.stderr
error: custom attribute panicked
 --> $DIR/empty_parent.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `parent` was empty in `fn sort`
